# SpaceCadets

./: .gitignore  LICENSE  README.md
challenge1/: Challenge.md  README.md
challenge1/src/: Cookie.java  Main.java
challenge2/: Challenge.md  README.md
challenge2/bareBones/: Main.java  format.bb  main.bb  main.cpp  main.py  main.rs
challenge2/src/miam/: BareBonesException.java  Command.java  Formatter.java  Interpreter.java  Loop.java  Main.java  Parser.java  Transpiler.java  Variable.java
challenge2and3/: Challenge.md  README.md
challenge2and3/bareBones/: format.bb  main.cpp  main.rs
challenge4/: Challenge.md  README.md
challenge4/src/: BCrypt.java  ByteToMessage.java  Client.java  ClientHandler.java  Message.java  MessageId.java  MessageToByte.java  Server.java  State.java  User.java  UserListener.java
challenge5/: Challenge.md  README.md
challenge5/src/: BMPReader.java  Coordinate.java  Main.java  Spirograph.java  Window.java
challenge6/: Challenge.md  README.md  pom.xml
challenge7/: .gitignore  Challenge.md  README.md  getTyperacerTexts.py  gradle.properties  settings.gradle
challenge7/app/: build.gradle
challenge8/: Cargo.toml  README.md
challenge8/.cargo/: config.toml
challenge8/bb-macro/: Cargo.toml
challenge8/bb-macro/src/: lib.rs
challenge8/src/: allocator.rs  fixed_size_block.rs  gdt.rs  interrupts.rs  lib.rs  logger.rs  main.rs  memory.rs  print.rs  vga_buffer.rs
challenge8/src/allocator/: bump.rs  fixed_size_block.rs  linked_list.rs
challenge8/src/task/: executor.rs  keyboard.rs  mod.rs
challenge9/: README.md  pom.xml
(+29 files in other folders)
