[package]
name = "challenge8"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "simple_boot",
]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
bootloader = "0.10.9"
font8x8 = { version = "0.3.1", default-features = false, features=["unicode"]}
lazy_static = { version = "1.4.0", features=["spin_no_std"] }
spin = "0.9.2"
x86_64 = "0.14.6"
volatile = "0.4.4"
pic8259 = "0.10.2"